homepage_edits/category_grid/category_grids.css
/* Stylesheet for the homepage grid items */
a:link, a:visited, a:hover, a:active {
    text-decoration: none;
    color: #000;
}
.grid-container {
    grid-template-columns: repeat(6, 1fr);
    grid-auto-rows: 1fr;
    user-select: none;
    display: none; /* Hide the grid by default */
}
.grid-item {
    border: 1px solid #e1e1e1;
    border-radius: 5px;
    box-shadow: 5px 5px 10px 0 #ccc;
    margin: 5%;
    padding: 5%;
    text-align: center;
    height: 90%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}
.grid-item:hover {
    box-shadow: 5px 5px 10px 0 #aaa;
}
.category-titlebar {
    border: 1px solid #e1e1e1;
    border-radius: 5px;
    box-shadow: 3px 3px 6px -1px #ccc;
    margin: 5px;
    padding: 5px;
    vertical-align: middle;
    cursor: pointer;
    user-select: none;
}
.category-titlebar:hover {
    box-shadow: 3px 3px 6px 0 #aaa;
}
.titlebar-title {
    vertical-align: middle;
    font-size: 14px;
    font-weight: bold;
}
.titlebar-hideshowbutton {
    vertical-align: middle;
    font-size: 100%;
    color: #00aa9188;
    user-select: none;
}
img.grid-item-image {
    max-width: 95%;
    max-height: 95%;
}
.grid-item-title {
    align-self: flex-start;
    width: 95%;
    font-size: 14px;
    padding-top: 5px;
    padding-bottom: 5%;
    text-align: center;
}
.grid-item-image {
    padding-bottom: 10%;
    vertical-align: bottom;
}

@media (max-width: 768px) {
    .grid-container {
    grid-template-columns: repeat(2, 1fr);
    } /* 2 columns on mobile */
}

